overlays/dev/flask-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-backend
  namespace: default
  labels:
    env: dev
spec:
  selector:
    matchLabels:
      app: backend-fargate
  template:
    metadata:
      labels:
        app: backend-fargate
